# umbra

./: .env.example  .env.mainnet.example  .gitignore  .npmrc  .prettierignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vitest.config.ts
app/: layout.tsx  page.tsx
circuits/: README.md
components/: copy-button.tsx  section-card.tsx
contracts/: Cargo.toml  README.md
contracts/bench-pool/: Cargo.toml
contracts/bench-pool/src/: lib.rs  test.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/umbra-pool/: Cargo.toml
contracts/umbra-pool/src/: lib.rs  poseidon.rs  poseidon_constants.rs  test.rs
docs/: ARCHITECTURE.md  ART_PROMPTS.md  BENCHMARK_PLAN.md  BROWSER_E2E.md  CHECKPOINT.md  CONFIDENTIAL_TOKENS_STRATEGY.md  CURRENT_STATE.md  DEEPER_TREE.md  FEASIBILITY_REVIEW.md  FINAL_SUBMISSION.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  INDEXER.md  JUDGE_REVIEW.md  MAINNET_CANARY.md  MAINNET_READINESS.md  PRODUCT_STATE.md  PROJECT_OVERVIEW.md  QA_FINAL.md  RELAYER.md  RELEASE_CANDIDATE.md  SCOPE.md  SECURITY_REVIEW.md  STATE.md  STRATEGIST_HANDOVER.md  SUBMISSION_MASTERPLAN.md  UMBRA_MAINNET_SPEC.md  WHAT_WE_BUILT.md  design-system.md  plan.md  prompts.md
hooks/: use-copy-to-clipboard.ts  use-prover.ts  use-wallet.ts
lib/: constants.ts  utils.ts
public/: pool-snapshot.mainnet.json
scripts/: build-snapshot.mts
styles/: globals.css
(+112 files in other folders)
