[package]
name = "umbra-pool"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
groth16-verifier = { path = "../groth16-verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
serde_json = "1"
hex = "0.4"
